tests/NormalTests/paczka1/small_fuzzy/32782970.err
Error in line 3: hOzb S369 1,5
Error in line 14: pN2wW4ntSw S465 33,4
